// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileSelector renders with default values 1`] = `
<body>
  <div>
    <svg
      viewBox="-83.88883846693516 -10 167.7776769338703 703.5045207150616"
      x="0"
      y="0"
    >
      
      
      <g
        class="tile straight-tile"
        transform="rotate(270 -55 45)"
      >
        <rect
          class="ground"
          height="110"
          width="90"
          x="-100"
          y="45"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-100"
            y="45"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-100"
            y="72.5"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-100"
            y="100"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-100"
            y="127.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-15"
            y="45"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-15"
            y="72.5"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-15"
            y="100"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-15"
            y="127.5"
          />
        </g>
      </g>
      
       
      
      
      <g
        class="tile curved-tile-enlarged"
        transform="rotate(270 -50 155)"
      >
        <path
          class="ground"
          d="M -95 155 A 10 10 0 0 1 -105 165 L -105 255 L -50 255 A 45 45 0 0 0 -5 210 L -5 155 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -95 155 A 10 10 0 0 1 -97.92893218813452 162.07106781186548 L -94.39339828220179 165.6066017177982 A 15 15 0 0 0 -90 155 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -97.92893218813452 162.07106781186548 A 10 10 0 0 1 -105 165 L -105 170 A 15 15 0 0 0 -94.39339828220179 165.6066017177982 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -10 210 A 40 40 0 0 1 -21.715728752538098 238.2842712474619 L -18.18019484660536 241.81980515339464 A 45 45 0 0 0 -5 210 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -21.715728752538098 238.2842712474619 A 40 40 0 0 1 -50 250 L -50 255 A 45 45 0 0 0 -18.18019484660536 241.81980515339464 Z"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="5"
            width="27.5"
            x="-105"
            y="250"
          />
          
          <rect
            class="barrier-chunk odd"
            height="5"
            width="27.5"
            x="-77.5"
            y="250"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-10"
            y="155"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-10"
            y="182.5"
          />
        </g>
      </g>
      
       
      
      
      <g
        class="tile curved-tile"
        transform="rotate(270 -50 275)"
      >
        <path
          class="ground"
          d="M -95 275 A 10 10 0 0 1 -105 285 L -105 375 A 100 100 0 0 0 -5 275 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -95 275 A 10 10 0 0 1 -97.92893218813452 282.0710678118655 L -94.39339828220179 285.6066017177982 A 15 15 0 0 0 -90 275 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -97.92893218813452 282.0710678118655 A 10 10 0 0 1 -105 285 L -105 290 A 15 15 0 0 0 -94.39339828220179 285.6066017177982 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -10 275 A 95 95 0 0 1 -17.23144441142776 311.35492607468353 L -12.612046748871322 313.268343236509 A 100 100 0 0 0 -5 275 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -17.23144441142776 311.35492607468353 A 95 95 0 0 1 -37.82485578727798 342.175144212722 L -34.289321881345245 345.71067811865476 A 100 100 0 0 0 -12.612046748871322 313.268343236509 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -37.82485578727798 342.175144212722 A 95 95 0 0 1 -68.64507392531647 362.7685555885722 L -66.73165676349102 367.3879532511287 A 100 100 0 0 0 -34.289321881345245 345.71067811865476 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -68.64507392531647 362.7685555885722 A 95 95 0 0 1 -105 370 L -105 375 A 100 100 0 0 0 -66.73165676349102 367.3879532511287 Z"
          />
        </g>
      </g>
      
       
      
      
      <g
        class="tile curved-tile"
        transform="rotate(247.5 -63.1427663402398 407.5598771356377)"
      >
        <path
          class="ground"
          d="M -108.1427663402398 407.5598771356377 A 120 120 0 0 1 -143.2899525978541 492.4126908780234 L -79.65034229106482 556.0523011848127 A 210 210 0 0 0 -18.142766340239803 407.5598771356377 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -108.1427663402398 407.5598771356377 A 120 120 0 0 1 -110.44853269185215 430.9707157775731 L -105.544606289836 431.9461673876537 A 125 125 0 0 0 -103.1427663402398 407.5598771356377 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -110.44853269185215 430.9707157775731 A 120 120 0 0 1 -117.27722243888539 453.4818890194485 L -112.65782477632897 455.3953061812739 A 125 125 0 0 0 -105.544606289836 431.9461673876537 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -117.27722243888539 453.4818890194485 A 120 120 0 0 1 -128.36641286393439 474.22830509798996 L -124.20906480242165 477.006156263088 A 125 125 0 0 0 -112.65782477632897 455.3953061812739 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -128.36641286393439 474.22830509798996 A 120 120 0 0 1 -143.2899525978541 492.4126908780234 L -139.75441869192136 495.9482247839561 A 125 125 0 0 0 -124.20906480242165 477.006156263088 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -23.142766340239803 407.5598771356377 A 205 205 0 0 1 -27.081783857577562 447.553393148944 L -22.177857455561423 448.52884475902465 A 210 210 0 0 0 -18.142766340239803 407.5598771356377 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -27.081783857577562 447.553393148944 A 205 205 0 0 1 -38.74746217542602 486.0099807704811 L -34.1280645128696 487.92339793230656 A 210 210 0 0 0 -22.177857455561423 448.52884475902465 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -38.74746217542602 486.0099807704811 A 205 205 0 0 1 -57.691495818218016 521.4517749046561 L -53.534147756705295 524.2296260697542 A 210 210 0 0 0 -34.1280645128696 487.92339793230656 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -57.691495818218016 521.4517749046561 A 205 205 0 0 1 -83.18587619699755 552.5167672788799 L -79.65034229106482 556.0523011848127 A 210 210 0 0 0 -53.534147756705295 524.2296260697542 Z"
          />
        </g>
      </g>
      
       
      
      
      <g
        class="tile curved-tile"
        transform="rotate(255 -71.17523740319321 523.5048538691518)"
      >
        <path
          class="ground"
          d="M -116.1752374031932 523.5048538691518 A 230 230 0 0 1 -146.98939453277228 638.5048538691518 L -69.0471081921728 683.5048538691518 A 320 320 0 0 0 -26.175237403193194 523.5048538691518 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -116.1752374031932 523.5048538691518 A 230 230 0 0 1 -118.14291928721681 553.5258780797636 L -113.18569498034776 554.1785090408639 A 235 235 0 0 0 -111.1752374031932 523.5048538691518 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -118.14291928721681 553.5258780797636 A 230 230 0 0 1 -124.01229735670748 583.0332342427316 L -119.18266822526215 584.3273294682442 A 235 235 0 0 0 -113.18569498034776 554.1785090408639 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -124.01229735670748 583.0332342427316 A 230 230 0 0 1 -133.68294492559724 611.5220433131225 L -129.06354726304082 613.435460474948 A 235 235 0 0 0 -119.18266822526215 584.3273294682442 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -133.68294492559724 611.5220433131225 A 230 230 0 0 1 -146.98939453277228 638.5048538691518 L -142.6592675138501 641.0048538691518 A 235 235 0 0 0 -129.06354726304082 613.435460474948 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -31.175237403193194 523.5048538691518 A 315 315 0 0 1 -33.870106070442944 564.620604418468 L -28.912881763573864 565.2732353795683 A 320 320 0 0 0 -26.175237403193194 523.5048538691518 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -33.870106070442944 564.620604418468 A 315 315 0 0 1 -41.9086021221367 605.0328530764458 L -37.07897299069134 606.3269483019585 A 320 320 0 0 0 -28.912881763573864 565.2732353795683 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -41.9086021221367 605.0328530764458 A 315 315 0 0 1 -55.153184662137846 644.0501350641551 L -50.53378699958142 645.9635522259805 A 320 320 0 0 0 -37.07897299069134 606.3269483019585 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -55.153184662137846 644.0501350641551 A 315 315 0 0 1 -73.37723521109501 681.0048538691518 L -69.0471081921728 683.5048538691518 A 320 320 0 0 0 -50.53378699958142 645.9635522259805 Z"
          />
        </g>
      </g>
      
       
      
      
      <g
        class="tile curved-tile"
        transform="rotate(258.75 -75.10977397620938 639.3691830969162)"
      >
        <path
          class="ground"
          d="M -120.1097739762094 639.3691830969162 A 340 340 0 0 1 -145.99073292237193 769.4815501010468 L -62.84157499635609 803.9230590139048 A 430 430 0 0 0 -30.109773976209397 639.3691830969162 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -120.1097739762094 639.3691830969162 A 340 340 0 0 1 -121.74696690766245 672.6950108089668 L -116.77104327430146 673.1850965106146 A 345 345 0 0 0 -115.1097739762094 639.3691830969162 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -121.74696690766245 672.6950108089668 A 340 340 0 0 1 -126.64277863911104 705.6998925823998 L -121.73885223709487 706.6753441924805 A 345 345 0 0 0 -116.77104327430146 673.1850965106146 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -126.64277863911104 705.6998925823998 A 340 340 0 0 1 -134.75005982725838 738.0659733634334 L -129.96535814859737 739.5173967497058 A 345 345 0 0 0 -121.73885223709487 706.6753441924805 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -134.75005982725838 738.0659733634334 A 340 340 0 0 1 -145.99073292237193 769.4815501010468 L -141.37133525981545 771.3949672628722 A 345 345 0 0 0 -129.96535814859737 739.5173967497058 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -35.1097739762094 639.3691830969162 A 425 425 0 0 1 -37.156265140525704 681.0264677369795 L -32.18034150716471 681.5165534386273 A 430 430 0 0 0 -30.109773976209397 639.3691830969162 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -37.156265140525704 681.0264677369795 A 425 425 0 0 1 -43.27602980483647 722.2825699537707 L -38.3721034028203 723.2580215638513 A 430 430 0 0 0 -32.18034150716471 681.5165534386273 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -43.27602980483647 722.2825699537707 A 425 425 0 0 1 -53.41013129002067 762.7401709300627 L -48.62542961135961 764.191594316335 A 430 430 0 0 0 -38.3721034028203 723.2580215638513 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -53.41013129002067 762.7401709300627 A 425 425 0 0 1 -67.46097265891251 802.0096418520794 L -62.84157499635609 803.9230590139048 A 430 430 0 0 0 -48.62542961135961 764.191594316335 Z"
          />
        </g>
      </g>
      
       
      
      
    </svg>
    
  </div>
</body>
`;

exports[`TileSelector renders with the given parameters 1`] = `
<body>
  <div>
    <svg
      height="400"
      viewBox="-55 -10 110 350"
      width="400"
      x="100"
      y="200"
    >
      
      
      <g
        class="tile straight-tile"
        transform="rotate(270 -55 45)"
      >
        <rect
          class="ground"
          height="110"
          width="90"
          x="-100"
          y="45"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-100"
            y="45"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-100"
            y="72.5"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-100"
            y="100"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-100"
            y="127.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-15"
            y="45"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-15"
            y="72.5"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-15"
            y="100"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-15"
            y="127.5"
          />
        </g>
      </g>
      
       
      <text
        class="svelte-15ppvz7"
        dominant-baseline="middle"
        style="--font-size: 30px;"
        text-anchor="middle"
        x="0"
        y="45"
      >
        2
      </text>
      
      
      <g
        class="tile curved-tile-enlarged"
        transform="rotate(270 -50 155)"
      >
        <path
          class="ground"
          d="M -95 155 A 10 10 0 0 1 -105 165 L -105 255 L -50 255 A 45 45 0 0 0 -5 210 L -5 155 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -95 155 A 10 10 0 0 1 -97.92893218813452 162.07106781186548 L -94.39339828220179 165.6066017177982 A 15 15 0 0 0 -90 155 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -97.92893218813452 162.07106781186548 A 10 10 0 0 1 -105 165 L -105 170 A 15 15 0 0 0 -94.39339828220179 165.6066017177982 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -10 210 A 40 40 0 0 1 -21.715728752538098 238.2842712474619 L -18.18019484660536 241.81980515339464 A 45 45 0 0 0 -5 210 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -21.715728752538098 238.2842712474619 A 40 40 0 0 1 -50 250 L -50 255 A 45 45 0 0 0 -18.18019484660536 241.81980515339464 Z"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="5"
            width="27.5"
            x="-105"
            y="250"
          />
          
          <rect
            class="barrier-chunk odd"
            height="5"
            width="27.5"
            x="-77.5"
            y="250"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-10"
            y="155"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-10"
            y="182.5"
          />
        </g>
      </g>
      
       
      <text
        class="svelte-15ppvz7"
        dominant-baseline="middle"
        style="--font-size: 30px;"
        text-anchor="middle"
        x="0"
        y="160"
      >
        2
      </text>
      
      
      <g
        class="tile curved-tile"
        transform="rotate(270 -50 275)"
      >
        <path
          class="ground"
          d="M -95 275 A 10 10 0 0 1 -105 285 L -105 375 A 100 100 0 0 0 -5 275 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -95 275 A 10 10 0 0 1 -97.92893218813452 282.0710678118655 L -94.39339828220179 285.6066017177982 A 15 15 0 0 0 -90 275 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -97.92893218813452 282.0710678118655 A 10 10 0 0 1 -105 285 L -105 290 A 15 15 0 0 0 -94.39339828220179 285.6066017177982 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -10 275 A 95 95 0 0 1 -17.23144441142776 311.35492607468353 L -12.612046748871322 313.268343236509 A 100 100 0 0 0 -5 275 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -17.23144441142776 311.35492607468353 A 95 95 0 0 1 -37.82485578727798 342.175144212722 L -34.289321881345245 345.71067811865476 A 100 100 0 0 0 -12.612046748871322 313.268343236509 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -37.82485578727798 342.175144212722 A 95 95 0 0 1 -68.64507392531647 362.7685555885722 L -66.73165676349102 367.3879532511287 A 100 100 0 0 0 -34.289321881345245 345.71067811865476 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -68.64507392531647 362.7685555885722 A 95 95 0 0 1 -105 370 L -105 375 A 100 100 0 0 0 -66.73165676349102 367.3879532511287 Z"
          />
        </g>
      </g>
      
       
      <text
        class="svelte-15ppvz7"
        dominant-baseline="middle"
        style="--font-size: 30px;"
        text-anchor="middle"
        x="0"
        y="280"
      >
        2
      </text>
      
      
    </svg>
    
  </div>
</body>
`;

exports[`TileSelector updates when the model is modified 1`] = `
<body>
  <div>
    <svg
      height="400"
      viewBox="-80.36352079666884 -10 160.72704159333767 469.1344560986456"
      width="400"
      x="100"
      y="200"
    >
      
      
      <g
        class="tile straight-tile"
        transform="rotate(270 -55 45)"
      >
        <rect
          class="ground"
          height="110"
          width="90"
          x="-100"
          y="45"
        />
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-100"
            y="45"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-100"
            y="72.5"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-100"
            y="100"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-100"
            y="127.5"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-15"
            y="45"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-15"
            y="72.5"
          />
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-15"
            y="100"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-15"
            y="127.5"
          />
        </g>
      </g>
      
       
      <text
        class="svelte-15ppvz7"
        dominant-baseline="middle"
        style="--font-size: 30px;"
        text-anchor="middle"
        x="0"
        y="45"
      >
        3
      </text>
      
      
      <g
        class="tile curved-tile-enlarged"
        transform="rotate(270 -50 155)"
      >
        <path
          class="ground"
          d="M -95 155 A 10 10 0 0 1 -105 165 L -105 255 L -50 255 A 45 45 0 0 0 -5 210 L -5 155 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -95 155 A 10 10 0 0 1 -97.92893218813452 162.07106781186548 L -94.39339828220179 165.6066017177982 A 15 15 0 0 0 -90 155 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -97.92893218813452 162.07106781186548 A 10 10 0 0 1 -105 165 L -105 170 A 15 15 0 0 0 -94.39339828220179 165.6066017177982 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -10 210 A 40 40 0 0 1 -21.715728752538098 238.2842712474619 L -18.18019484660536 241.81980515339464 A 45 45 0 0 0 -5 210 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -21.715728752538098 238.2842712474619 A 40 40 0 0 1 -50 250 L -50 255 A 45 45 0 0 0 -18.18019484660536 241.81980515339464 Z"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk even"
            height="5"
            width="27.5"
            x="-105"
            y="250"
          />
          
          <rect
            class="barrier-chunk odd"
            height="5"
            width="27.5"
            x="-77.5"
            y="250"
          />
        </g>
        <g
          class="barrier straight-barrier"
        >
          
          <rect
            class="barrier-chunk odd"
            height="27.5"
            width="5"
            x="-10"
            y="155"
          />
          
          <rect
            class="barrier-chunk even"
            height="27.5"
            width="5"
            x="-10"
            y="182.5"
          />
        </g>
      </g>
      
       
      <text
        class="svelte-15ppvz7"
        dominant-baseline="middle"
        style="--font-size: 30px;"
        text-anchor="middle"
        x="0"
        y="160"
      >
        1
      </text>
      
      
      <g
        class="tile curved-tile"
        transform="rotate(270 -50 275)"
      >
        <path
          class="ground"
          d="M -95 275 A 10 10 0 0 1 -105 285 L -105 375 A 100 100 0 0 0 -5 275 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -95 275 A 10 10 0 0 1 -97.92893218813452 282.0710678118655 L -94.39339828220179 285.6066017177982 A 15 15 0 0 0 -90 275 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -97.92893218813452 282.0710678118655 A 10 10 0 0 1 -105 285 L -105 290 A 15 15 0 0 0 -94.39339828220179 285.6066017177982 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -10 275 A 95 95 0 0 1 -17.23144441142776 311.35492607468353 L -12.612046748871322 313.268343236509 A 100 100 0 0 0 -5 275 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -17.23144441142776 311.35492607468353 A 95 95 0 0 1 -37.82485578727798 342.175144212722 L -34.289321881345245 345.71067811865476 A 100 100 0 0 0 -12.612046748871322 313.268343236509 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -37.82485578727798 342.175144212722 A 95 95 0 0 1 -68.64507392531647 362.7685555885722 L -66.73165676349102 367.3879532511287 A 100 100 0 0 0 -34.289321881345245 345.71067811865476 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -68.64507392531647 362.7685555885722 A 95 95 0 0 1 -105 370 L -105 375 A 100 100 0 0 0 -66.73165676349102 367.3879532511287 Z"
          />
        </g>
      </g>
      
       
      <text
        class="svelte-15ppvz7"
        dominant-baseline="middle"
        style="--font-size: 30px;"
        text-anchor="middle"
        x="0"
        y="280"
      >
        2
      </text>
      
      
      <g
        class="tile curved-tile"
        transform="rotate(247.5 -63.1427663402398 407.5598771356377)"
      >
        <path
          class="ground"
          d="M -108.1427663402398 407.5598771356377 A 120 120 0 0 1 -143.2899525978541 492.4126908780234 L -79.65034229106482 556.0523011848127 A 210 210 0 0 0 -18.142766340239803 407.5598771356377 Z"
        />
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk even"
            d="M -108.1427663402398 407.5598771356377 A 120 120 0 0 1 -110.44853269185215 430.9707157775731 L -105.544606289836 431.9461673876537 A 125 125 0 0 0 -103.1427663402398 407.5598771356377 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -110.44853269185215 430.9707157775731 A 120 120 0 0 1 -117.27722243888539 453.4818890194485 L -112.65782477632897 455.3953061812739 A 125 125 0 0 0 -105.544606289836 431.9461673876537 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -117.27722243888539 453.4818890194485 A 120 120 0 0 1 -128.36641286393439 474.22830509798996 L -124.20906480242165 477.006156263088 A 125 125 0 0 0 -112.65782477632897 455.3953061812739 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -128.36641286393439 474.22830509798996 A 120 120 0 0 1 -143.2899525978541 492.4126908780234 L -139.75441869192136 495.9482247839561 A 125 125 0 0 0 -124.20906480242165 477.006156263088 Z"
          />
        </g>
        <g
          class="barrier curved-barrier"
        >
          
          <path
            class="barrier-chunk odd"
            d="M -23.142766340239803 407.5598771356377 A 205 205 0 0 1 -27.081783857577562 447.553393148944 L -22.177857455561423 448.52884475902465 A 210 210 0 0 0 -18.142766340239803 407.5598771356377 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -27.081783857577562 447.553393148944 A 205 205 0 0 1 -38.74746217542602 486.0099807704811 L -34.1280645128696 487.92339793230656 A 210 210 0 0 0 -22.177857455561423 448.52884475902465 Z"
          />
          
          <path
            class="barrier-chunk odd"
            d="M -38.74746217542602 486.0099807704811 A 205 205 0 0 1 -57.691495818218016 521.4517749046561 L -53.534147756705295 524.2296260697542 A 210 210 0 0 0 -34.1280645128696 487.92339793230656 Z"
          />
          
          <path
            class="barrier-chunk even"
            d="M -57.691495818218016 521.4517749046561 A 205 205 0 0 1 -83.18587619699755 552.5167672788799 L -79.65034229106482 556.0523011848127 A 210 210 0 0 0 -53.534147756705295 524.2296260697542 Z"
          />
        </g>
      </g>
      
       
      <text
        class="svelte-15ppvz7"
        dominant-baseline="middle"
        style="--font-size: 30px;"
        text-anchor="middle"
        x="0"
        y="399.5672280493228"
      >
        1
      </text>
      
      
    </svg>
    
  </div>
</body>
`;
